--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
       <% if logged_in? %>
         <div class="row">
           <%= render 'layouts/sidebar' %>
-          <div class="col-md-7 col-sm-7">
+          <div class="col-md-9 col-sm-8 main-col">
             <%= yield %>
           </div>
         </div>
