--- a/app/views/microposts/_micropost_form.html.erb
+++ b/app/views/microposts/_micropost_form.html.erb
@@ -22,6 +22,8 @@
       </div>
     </div>
 
+    <%= f.text_field :title, placeholder: "タイトル", class: "form-control", style: "display: none; margin-bottom: 4px;" %>
+
     <div class="tagging-form">
       <%= f.select :school_type, school_types, { include_blank: "校種タグ" }, class: "form-control" %>
       <%= f.select :subject, "", { include_blank: "---" }, class: "form-control" %>
