--- a/app/views/microposts/edit.js.erb
+++ b/app/views/microposts/edit.js.erb
@@ -1,4 +1,5 @@
 $(".micropost_form_container").hide().html("")
+$(".tag-search-container").hide().html("")
 
 $(".micropost-edit-modal-<%= @micropost.id %>").html("<%= escape_javascript(render partial: 'microposts/edit_modal', locals: { micropost: @micropost }) %>").hide().fadeIn(300)
 
@@ -12,11 +13,6 @@ if ($('#micropost_educational_material').prop('checked')) {
   });
 }
 
-
-$('.close-modal').on("click", function(){
-  location.reload();
-});
-
 $('#micropost_educational_material').on("change", function(ev) {
   if (ev.target.checked) {
     $('.attach_form').css('margin-top', '0px');
@@ -27,4 +23,8 @@ $('#micropost_educational_material').on("change", function(ev) {
       $('.attach_form').css('margin-top', '40px');
     });
   }
+});
+
+$('.close-modal').on("click", function(){
+  location.reload();
 });
