--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1><%= @title %></h1>
 
-<div class="tagging-form">
+<div class="tag-search-container">
   <%= render partial: 'microposts/tag_search_form', locals: { micropost: @micropost, selected_tags: @selected_tags, tags: @tags } %>
 </div>
 
