--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,4 @@
-<span class='profile_icon_frame'>
+<span class='profile-icon-frame'>
   <%= current_user.image.attached? ? (link_to image_tag(current_user.image), current_user) : (link_to gravatar_for(current_user), current_user) %>
 </span>
 <h1><%= current_user.name %></h1>
