--- a/app/views/tags/_show_tags.html.erb
+++ b/app/views/tags/_show_tags.html.erb
@@ -1,3 +1,20 @@
-  <% micropost.tags.each do |tag| %>
-    <%= link_to tag.name, microposts_path(click_tag: tag.name) %>
-  <% end %>
+<%# 一覧画面ではタグは５個まで表示 %>
+<% tags = request.path_info.start_with?('/microposts') ? micropost.tags : micropost.tags.take(5) %>
+
+<% if tags.count != 0 %>
+  <div class="tags-wrap">
+    <% tags.each do |tag| %>
+      <%= link_to tag.name, microposts_path(click_tag: tag.name), class: "btn-tag" %>
+    <% end %>
+    <% if !request.path_info.start_with?('/microposts') && micropost.tags.size > 5 %>
+      <span>...</span>
+    <% end %>
+
+    <%= link_to edit_micropost_tags_path(micropost), class: "btn btn-tagsedit", remote: true do %>
+      <span style="position: relative; display: inline-block; width: 26px; height: 26px">
+        <i class="fas fa-tags" style="position: absolute; bottom: 1px; left: 3px; font-size: 18px; color: #616161; opacity: 0.6"></i>
+        <i class="fas fa-pencil-alt" style="position: absolute; top: 4px; right: 3px; color: #616161"></i>
+      </span>
+    <% end %>
+  </div>
+<% end %>
