--- a/app/views/users/portcurio.html.erb
+++ b/app/views/users/portcurio.html.erb
@@ -2,7 +2,7 @@
 
 <h1>My Portcurio</h1>
 
-<div class="tagging-form">
+<div class="tag-search-container">
   <%= render partial: 'microposts/tag_search_form', locals: { micropost: @micropost, selected_tags: @selected_tags, tags: @tags } %>
 </div>
 
