--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,38 @@
 <% provide(:title, @userprofile.name) %>
 
-<section class="user_info user_show">
-  <span class='profile_icon_frame'>
+<section class="user-info user-show">
+  <div class='profile-icon-frame'>
     <%= @userprofile.image.attached? ? (image_tag @userprofile.image) : (gravatar_for @userprofile) %>
-  </span>
-  <h1><%= @userprofile.name %></h1>
-  <%= render partial: 'relationships/follow_form', locals: {user: @userprofile} if logged_in? %>
+  </div>
+
+  <div class='user-text-info'>
+    <h1><%= @userprofile.name %></h1>
+
+    <%= render partial: 'relationships/follow_form', locals: {user: @userprofile} if logged_in? %>
+  </div>
 </section>
+
 <section class="stats">
   <%= render 'shared/stats' %>
 </section>
+
 <% if @userprofile.school_type.present? || @userprofile.subject.present? || @userprofile.profile.present? || @userprofile.website.present? %>
+
   <section class="profile">
+
     <ul>
       <% if @userprofile.school_type.present? %>
         <li>メイン校種: <%= @userprofile.school_type %></li>
       <% end %>
+
       <% if @userprofile.subject.present? %>
         <li>メイン教科: <%= @userprofile.subject %></li>
       <% end %>
+
       <% if @userprofile.profile.present? %>
         <li class="profile_description">プロフィール:<p><%= @userprofile.profile %></p></li>
       <% end %>
+
       <% if @userprofile.website.present? %>
         <li>Webサイト:
           <% if raw(Rinku.auto_link(simple_format(h(@userprofile.website)))).include?("https://#{domain_name}") %>
@@ -32,8 +43,11 @@
         </li>
       <% end %>
     </ul>
+
   </section>
+  
 <% end %>
+
 <ul id="activityTab" class="nav nav-tabs nav-fill">
   <li class="nav-item active">
     <a href="#contents1" data-toggle="tab">Microposts (<%= @userprofile.microposts.count %>)</a>
@@ -57,7 +71,7 @@
   
   <div id="contents2" class="tab-pane fade">
     <% if @comments_and_likes.any? %>
-      <ol class="microposts jscroll">
+      <ol class="microposts jscroll-reaction">
         <% @comments_and_likes.each do |activity| %>
           <%= render partial: 'notifications/comment_and_like', locals: {activity: activity} %>
         <% end %>
