--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,6 +1,6 @@
 <div class="comments-wrap wrap">
-  <%= button_to close_comment_path(@feedmicropost.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "reply-close-btn btn-link", style: "text-align: center; background-color: #95a5a6; margin: 0px; border-top-left-radius: 16px; border-top-right-radius: 16px; width: 100%; line-height: 1.5;", remote: true } do %>
-    <i class="fa-solid fa-caret-up fa-lg" data-fa-transform="down-2" style="color: white;"></i>
+  <%= button_to close_comment_path(@feedmicropost.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "reply-close-btn btn-link", style: "text-align: center; background-color: #95a5a6; margin: 0px; border-top-left-radius: 16px; border-top-right-radius: 16px; width: 100%; height: 20px;", remote: true } do %>
+    <i class="fa-solid fa-caret-up fa-lg" data-fa-transform="up-1" style="color: white;"></i>
   <% end %>
 
   <div class="comments">
