style: change user-info margin in user-show page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -697,7 +697,7 @@ aside {
 }
 
 .user-info.user-show {
-  margin: 24px 0 8px;
+  margin: 24px 0 8px 8px;
   .profile-icon-frame {
     width: 80px;
     height: 80px;
