style: modify like-modal

--- a/app/views/likes/close.js.erb
+++ b/app/views/likes/close.js.erb
@@ -1,1 +1,1 @@
-$(".like-modal-<%= @likeable.class.name.downcase %>-<%= @likeable.id %>").html("")
+$(".like-modal-<%= @likeable.class.name.downcase %>-<%= @likeable.id %>").fadeOut(300);
