--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1530,7 +1530,7 @@ span.image {
     padding: 20px 0;
     width: 350px;
     .users {
-      padding: 0 40px;
+      padding: 0 40px 0 20px;
     }
     height: 500px;
     border-radius: 16px;
