--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <ol class="microposts">
-  <%= render @feedall %>
+  <%= render @all_microposts %>
 </ol>
 
-<div class='center'><%= paginate @feedall %></div>
+<div class='center'><%= paginate @all_microposts %></div>
