--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -39,6 +39,17 @@ $gray-medium-light: #eaeaea;
     grid-template-columns: 0 1fr !important; /* 1列目の幅を0に設定 */
     gap: 0 !important; /* 1列目と2列目の間隔を0に設定 */
   }
+  .pc {
+    display: none;
+  }
+  .phone {
+    display: block;
+  }
+}
+@media screen and (min-width: 706px) {
+  .pc {
+    display: block;
+  }
 }
 
 /* 大きめのコンテナ */
