style: add margin-top in footer with phone

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -45,6 +45,9 @@ $gray-medium-light: #eaeaea;
   .phone {
     display: block;
   }
+  footer {
+    margin-top: 180px !important;
+  }
 }
 @media screen and (min-width: 706px) {
   .pc {
