--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer" style="margin-top: 16px">
+<footer class="footer">
   <% container_class = request.path_info == root_path ? "container-fluid" : "container-large" %>
   <div class=<%= container_class %>>
     <small style="margin:0 16px">
