style: change font-size in textarea

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -228,8 +228,9 @@ section {
 
 textarea {
   resize: vertical;
-  height: 58px;
+  height: 64px;
   border: 2px solid #dce4ec;
+  font-size: 1rem;
 }
 
 .center {
